--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -203,10 +203,10 @@ footer {
 }
 
 /* general rules */
-.page-header-title {
+.entity-view-header-title {
   padding: 25px 0 25px 0;
 }
 
-.asdf {
+.entity-view-footer-links {
   color: #00aaaa;
 }
