--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -61,4 +61,4 @@
 
 </div>
 
-<%= link_to('New Device', new_device_path, class: 'asdf') %>
+<%= link_to('New Device', new_device_path, class: 'entity-view-footer-links') %>
