--- a/app/views/quick_buttons/edit.html.erb
+++ b/app/views/quick_buttons/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'quick_button_form', quick_button: @quick_button %>
 
-<%= link_to 'Show', @quick_button %> |
-<%= link_to 'Back', quick_buttons_path %>
+<div class="entity-view-footer-links">
+  <%= link_to 'Show', @quick_button %> |
+  <%= link_to 'Back', quick_buttons_path %>
+</div>
