--- a/app/views/quick_buttons/index.html.erb
+++ b/app/views/quick_buttons/index.html.erb
@@ -59,4 +59,4 @@
 
 </div>
 
-<%= link_to 'New Quick Button', new_quick_button_path %>
+<%= link_to 'New Quick Button', new_quick_button_path, class: 'entity-view-footer-links' %>
