--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -6,6 +6,4 @@
 
 <%= render partial: 'device_form', locals: { device: @device } %>
 
-<hr>
-
-<%= link_to 'Back', devices_path %>
+<%= link_to 'Back', devices_path, class: 'entity-view-footer-links' %>
