--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,14 +3,25 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="form-group">
+        <%= f.label :email %><br/>
+        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+      </div>
+    </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="form-group">
+          <%= f.submit "Send me reset password instructions", class: 'btn btn-default' %>
+        </div>
+      </div>
+    </div>
   </div>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
