--- a/app/views/quick_buttons/new.html.erb
+++ b/app/views/quick_buttons/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'quick_button_form', quick_button: @quick_button %>
 
-<%= link_to 'Back', quick_buttons_path %>
+<%= link_to 'Back', quick_buttons_path, class: 'entity-view-footer-links' %>
