--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -223,22 +223,22 @@
   <div class="panel panel-default">
 
     <div class="panel-heading">
-      <h3 class="panel-title">Device info</h3>
+      <h3 class="panel-title">Information about device</h3>
     </div>
 
     <div class="panel-body">
       <% @device.device_stats.each do |stat| %>
         <div class="row">
 
-          <div class="col-md-4">
+          <div class="col-xs-2">
             <%= (stat.label) ? stat.label : stat.stat_name %>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-5">
             <%= stat.value %>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-xs-5">
             <%= stat.last_update_at.strftime('%d/%m/%Y %H:%M') %>
           </div>
 
