--- a/app/views/quick_buttons/show.html.erb
+++ b/app/views/quick_buttons/show.html.erb
@@ -62,6 +62,6 @@
 </div>
 
 <div class="entity-view-footer-links">
-  <%= link_to 'Edit', edit_quick_button_path(@quick_button) %> |
-  <%= link_to 'Back', quick_buttons_path %>
+  <%= link_to('Edit', edit_quick_button_path(@quick_button)) %> |
+  <%= link_to('Back', quick_buttons_path) %>
 </div>
