--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -6,6 +6,6 @@
 
 <%= render 'schedule_form', schedule: @schedule, schedule_recurrent_unit_list: @schedule_recurrent_unit_list %>
 
-<hr/>
-
-<%= link_to 'Back', schedules_path %>
+<div class="entity-view-footer-links">
+  <%= link_to 'Back', schedules_path %>
+</div>
