--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -28,5 +28,7 @@
 
 <% end %>
 
-<%= link_to 'Edit', edit_schedule_path(@schedule) %> |
-<%= link_to 'Back', schedules_path %>
+<div class="entity-view-footer-links">
+  <%= link_to 'Edit', edit_schedule_path(@schedule) %> |
+  <%= link_to 'Back', schedules_path %>
+</div>
