--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -61,4 +61,6 @@
 
 </div>
 
-<%= link_to('New Device', new_device_path, class: 'entity-view-footer-links') %>
+<div class="entity-view-footer-links">
+  <%= link_to('New Device', new_device_path) %>
+</div>
