--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -6,4 +6,6 @@
 
 <%= render partial: 'device_form', locals: { device: @device } %>
 
-<%= link_to 'Back', devices_path, class: 'entity-view-footer-links' %>
+<div class="entity-view-footer-links">
+  <%= link_to('Back', devices_path) %>
+</div>
