--- a/app/views/devise/shared/_brand.html.erb
+++ b/app/views/devise/shared/_brand.html.erb
@@ -10,7 +10,7 @@
   <div class="col-md-3"></div>
   <div class="col-md-6">
     <div class="text-center">
-      Πανεπηστημιο δυτικής μακεδονίας
+      Πανεπιστήμιο Δυτικής Μακεδονίας
       <br>
       Πολυτεχνική Σχολή
       <br>
