--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,2 +1,6 @@
 <footer class="footer">
+  Developed by Loumpas Anastasios. Supervised by Minas Dasygenis
+  <br>
+  University of Western Macedonia, Department of Informatics and
+  Telecommunications Engineering.
 </footer>
