--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -10,8 +10,9 @@
 
     <div class="responsive-table-header">
       <div class="row">
+        <div class="col-md-1"><b>Status</b></div>
         <div class="col-md-3"><b>Name</b></div>
-        <div class="col-md-4"><b>Current Values</b></div>
+        <div class="col-md-3"><b>Current Values</b></div>
         <div class="col-md-3"><b>Location</b></div>
         <div class="col-md-2"><b>Actions</b></div>
       </div>
@@ -21,10 +22,21 @@
     <% @devices.each do |device| %>
 
       <div class="row">
+
+        <div data-label="Status" class="col-md-1">
+          <div class="responsive-table-element">
+            <% if device.last_contact_at && device_online?(device.last_contact_at) %>
+              <span id="device-status-indicator-text" class="online">ONLINE</span>
+            <% else %>
+              <span id="device-status-indicator-text" class="offline">OFFLINE</span>
+            <% end %>
+          </div>
+        </div>
+
         <div data-label="<%= Device.human_attribute_name(:name) %>" class="col-md-3">
           <div class="responsive-table-element"><%= device.name %></div>
         </div>
-        <div data-label="Current Values" class="col-md-4">
+        <div data-label="Current Values" class="col-md-3">
           <div class="responsive-table-element">
             <% device.device_attributes.each do |dev_attr| %>
               <% if dev_attr.current_value %>
