--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to Smart Devices Control System</h1>
-<h2>Manage your smart devices</h2>
+<h2>Manage your smart devices from one place</h2>
 
 <% if user_signed_in? %>
   <% if @offline_devices_count > 0 %>
