Fix text on devices view

--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -5,7 +5,7 @@
 
 <div class="page-header-title">
 
-  <h1>Overview for the device:</h1>
+  <h1>Detailed view for the device</h1>
 
   <h1>
     <small><%= @device.name %> @ <%= @device.location %></small>
