--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -207,6 +207,7 @@ footer {
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
   color: $gray-light;
+  text-align: center;
 }
 
 /* general rules */
@@ -221,5 +222,5 @@ footer {
 }
 
 hr {
-  border-top: 1px solid rgb(20, 224, 202);
+  border-top: 1px solid #be7cd5;
 }
