Update _schedule_form.html.erb button text

--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -153,7 +153,7 @@
           <div class="form-group">
             <button type="button" class="action-button active add-new-event-to-schedule form-control">
               <span class="glyphicon glyphicon-plus"></span>
-              Add new schedule event
+              Add device to schedule
             </button>
           </div>
         </div>
