--- a/app/views/devices/_device_attribute_form.html.erb
+++ b/app/views/devices/_device_attribute_form.html.erb
@@ -14,13 +14,13 @@
 
         <div class="col-sm-2">
           <div class="form-group">
-            <%= label DeviceAttribute, :direction_c_id %>
+            <%= label(DeviceAttribute, :primitive_type_c_id, DeviceAttribute.human_attribute_name(:direction_c_id)) %>
           </div>
         </div>
 
         <div class="col-sm-2">
           <div class="form-group">
-            <%= label DeviceAttribute, :primitive_type_c_id %>
+            <%= label(DeviceAttribute, :primitive_type_c_id, DeviceAttribute.human_attribute_name(:primitive_type_c_id)) %>
           </div>
         </div>
 
